Updating Old File for core commit 8e3aeaea2d9d8983c9bc4ebea9175519a1099f0d

--- a/help/marketo/release-notes/2007-2009.md
+++ b/help/marketo/release-notes/2007-2009.md
@@ -3,9 +3,9 @@ unique-page-id: 2950332
 description: 2007-2009 - Marketo Docs - Productdocumentatie
 title: 2007-2009
 translation-type: tm+mt
-source-git-commit: 47b2fee7d146c3dc558d4bbb10070683f4cdfd3d
+source-git-commit: 029d8b419ba5078980b4fde9890bdb35194bf264
 workflow-type: tm+mt
-source-wordcount: '3281'
+source-wordcount: '3276'
 ht-degree: 0%
 
 ---
@@ -91,7 +91,7 @@ ht-degree: 0%
 
 * **Prestatieverbeteringen**: We hebben de prestaties van Trees, Reports, Campaigns, Sync en Smart List verbeterd. We streven ernaar om elke release sneller te zijn.
 * **Schaalbaarheid**: Wij hebben vele methodes en normen voor onszelf opgezet om met onze klantenbasis te groeien. De zaken zijn goed verlopen en we willen ervoor zorgen dat we schalen om aan de behoeften van onze klanten te voldoen.
-* **Lijst van afgewezen personen en afzet Uitgestelde controle**: Nu kunt u de e-mailstromen beheren op basis van welke criteria u ook wilt.
+* **Lijst van gewezen personen en afzet Uitgestelde controle**: Nu kunt u de e-mailstromen beheren op basis van welke criteria u ook wilt.
 * **Campagneplanner**: Stel uw campagne zo in dat deze om 6.00 uur op maandagochtend of elke andere gewenste tijd wordt uitgevoerd. Meerdere regels ook instellen!
 
 ## Augustus 2008 {#august}
@@ -203,8 +203,3 @@ ht-degree: 0%
 * **Operationele e-mails**: Wanneer u een e-mail als &quot;operationeel&quot;verklaart zal e-mail normale unsubscribe controles negeren en een e-mail verzenden geen kwestie wat-en die e-mails zullen niet unsubscribe tekst omvatten. Gebruik dit alleen voor transactie-e-mailberichten (een reactie op een direct verzoek) en niet voor algemene marketingcampagnes.
 * **Zoekvak voor tekst** die door e-mail kan worden vervangen: U kunt dat veld gemakkelijk vinden in de e-maileditor.
 * Veel **opgeloste problemen**
-
-### Volgende: {#whats-next}
-
-* [Opmerkingen bij de release van Marketo 2010-2011](2010-2011.md)
-
