Updating Old File for core commit

--- a/help/marketo/release-notes/2007-2009.md
+++ b/help/marketo/release-notes/2007-2009.md
@@ -2,14 +2,14 @@
 unique-page-id: 2950332
 description: 2007-2009 - Marketo Docs - Productdocumentatie
 title: 2007-2009
+exl-id: 462e99b7-d0ac-4b04-8718-44c4b19af129
 translation-type: tm+mt
-source-git-commit: 029d8b419ba5078980b4fde9890bdb35194bf264
+source-git-commit: 72e1d29347bd5b77107da1e9c30169cb6490c432
 workflow-type: tm+mt
 source-wordcount: '3276'
 ht-degree: 0%
 
 ---
-
 
 # 2007-2009
 
@@ -33,7 +33,7 @@ ht-degree: 0%
 
 * **Campagne** aanvragen: Voeg leads toe aan een campagne ter plekke.
 * **Afbeeldingen en bestanden** zoeken: Vind snel uw geüploade middelen.
-* **Originele brongegevens in Salesforce**: Werk uw Marketo-AppExchange-app bij voor nieuwe velden.
+* **Originele brongegevens in Salesforce**: Werk uw Marketo AppExchange-app bij voor nieuwe velden.
 * **Informatie voor alle leads** opgevraagd: Alle leads hebben nu informatie over bedrijven en locaties doorgenomen.
 
 ## April 2009 {#april}
@@ -41,7 +41,7 @@ ht-degree: 0%
 * **Filtersets**: Gebruik filtersets om de activiteiten in de weergave snel te wijzigen.
 * **Datumkiezer**: Voeg een grafische datumkiezer toe aan uw formulieren met enkele snelle wijzigingen.
 * **Samenvoegen met een aangepaste waarde**: Voer bij het samenvoegen van leads uw eigen waarde in voor elk veld in een conflict.
-* **Bladwijzers**: Deel uw favoriete Marketo-pagina&#39;s met uw vrienden!
+* **Bladwijzers**: Deel je favoriete Marketo-pagina&#39;s met je vrienden!
 * **Knoppen** Volgende en Vorige: De knoppen Volgende en Vorige in uw browser werken nu.
 * **Oorspronkelijke referentie-, query- en zoekengine**: Deze informatie wordt opgeslagen voor alle leads die op de pagina&#39;s met Munchkin-functionaliteit en landingspagina&#39;s klikken.
 * **Spamcontrole**: Je zou drastisch gereduceerde spamverbindingen moeten zien vanwege wijzigingen in onze formulieren.
@@ -51,7 +51,7 @@ ht-degree: 0%
 
 * **Nieuwe shell** gebruikersinterface: We hebben onze nieuwe gebruikersinterface gestart! Het heeft tientallen bruikbaarheidsverbeteringen en insectenmoeilijke situaties.
 * **Verbeterde prestaties en de gebruikersinterface worden gewijzigd**: de website is nu sneller dan ooit, vooral voor IE7-gebruikers.
-* **Salesforce-koppeling in waarschuwinginfo** verzenden: Wanneer u een token voor waarschuwinggegevens verzenden in een e-mail gebruikt en de lead in Salesforce staat, krijgt u koppelingen naar Salesforce en Marketo.
+* **Salesforce-koppeling in waarschuwinginfo** verzenden: Als u een token voor waarschuwinggegevens verzenden in een e-mail gebruikt en de lead in Salesforce staat, krijgt u koppelingen naar Salesforce en Marketo.
 * **Aangepaste velden** Salesforce-account: Je aangepaste Salesforce-accountvelden kunnen nu worden gebruikt in Marketo.
 * **Slimme lijst** klonen: Nu kunt u om het even welke Slimme Lijst in uw Gegevensbestand van de Lood dupliceren. Klik er met de rechtermuisknop op en kies Klonen.
 * **E-mailkoppelingen zonder bijhouden**: Als u geen versiering van de verbinding wilt en het volgen op een bepaalde verbinding in uw e-mail klikt, gebruik class=&quot;mktNoTrack&quot;in uw verbindingsmarkering om het te onderdrukken.
@@ -61,7 +61,7 @@ ht-degree: 0%
 * **Datum van laatste update bij samenvoegen**: Wanneer u leads samenvoegt, ziet u nu de tijd waarop de lead voor het laatst is bijgewerkt.
 * **Verbeterd ****Geo-locatie**: We verzamelen nu aanvullende gegevens die u helpen uw leads te identificeren, zoals de gevolgde plaats, staat/regio, postcode, code van het telefoongebied en het metrogebied.
 
-* **Verbeterde e-mail** voor test verzenden: U kunt nu de tekstversie van de e-mail verzenden wanneer u een teste-mail verzendt. Marketo slaat ook de laatste 10 lijsten op van e-mailontvangers die u hebt gebruikt om uw e-mailtests te versnellen.
+* **Verbeterde e-mail** voor test verzenden: U kunt nu de tekstversie van de e-mail verzenden wanneer u een teste-mail verzendt. Bovendien slaat Marketo de laatste tien lijsten met e-mailontvangers op die u hebt gebruikt om uw e-mailtests te versnellen.
 * **Slimme &#39;slimme campagne&#39;-pictogrammen**: De pictogrammen in de Smart Campaign-structuur laten u nu zien of de campagne actief is of niet.
 * **Veld nummer omzetten in score**: Hebt u een geheel-getalveld dat u als score wilt behandelen? Zet het in een score in de sectie van het Beheer van het Gebied van de Admin pagina om.
 * **Groeperen op aangepaste velden in leads Reports**: In de sectie Analytics kunt u de rapporten nu groeperen op basis van uw aangepaste velden in elk van de rapporten &#39;Leads by X&#39;. U kunt de groepering wijzigen door op de knop Rapportinstellingen te klikken.
@@ -71,7 +71,7 @@ ht-degree: 0%
 
 ## Januari 2009 {#january}
 
-* **API**: Nu kunt u direct met het systeem van de Marketo in wisselwerking staan.
+* **API**: Nu kunt u rechtstreeks met het Marketo-systeem communiceren.
 * **Outlook-insteekmodule**: Laat uw vertegenwoordigers e-mailberichten verzenden vanuit Outlook en volg de verzonden/geopende berichten/klikken/openen in Marketo. Nog activering!
 
 ## December 2008 {#december}
@@ -102,7 +102,7 @@ ht-degree: 0%
 * **Op populair verzoek hebben we nieuwe e-mailkolommen toegevoegd aan de sectie** Analytics: Het e-maildiagram geeft nu meer details weer, zoals tellingen voor verzonden, teruggestuurd, leveringspercentage en niet-geabonneerd. Op het tabblad Overzicht van de campagne **wordt niet langer het overzicht van de e-mailprestaties weergegeven**: Er is nu een tabblad E-mail beschikbaar om deze informatie weer te geven. Dit verslag is ook per campagne beschikbaar.
 
 * **Bijbehorende API-functie** voor lead: Dit is een nieuwe functie in het JavaScript-bestand in Munchkin waarmee u een systeem van derden en uw Marketo-account kunt integreren.
-* **Andere verbeteringen**: De betere prestaties hebben de bruikbaarheid van Internet Explorer 7 met Marketo verbeterd. Met de actie Verwijderen uit stroom wordt nu de activiteit voor elke verwijderde lead geregistreerd. In rapporten en leaddetails zijn verwijderde mogelijkheden nu uitgesloten. In het diagram Push Lead naar Sales werden updates, fouten en invoegingen weergegeven. Nu toont het slechts tussenvoegsels. Het campagneresamenvatting toont nu het aantal leads in wachtende stappen.
+* **Andere verbeteringen**: Verbeterde prestaties hebben de bruikbaarheid van Internet Explorer 7 met Marketo verbeterd. Met de actie Verwijderen uit stroom wordt nu de activiteit voor elke verwijderde lead geregistreerd. In rapporten en leaddetails zijn verwijderde mogelijkheden nu uitgesloten. In het diagram Push Lead naar Sales werden updates, fouten en invoegingen weergegeven. Nu toont het slechts tussenvoegsels. Het campagneresamenvatting toont nu het aantal leads in wachtende stappen.
 
 ## Juli 2008 {#july-1}
 
@@ -139,7 +139,7 @@ ht-degree: 0%
 
 ## Maart 2008 {#march-1}
 
-* **Push activities from Marketo to to Salesforce**: Klik gewoon op admin->Salesforce en controleer de activiteiten die u met uw verkoopteam wilt delen.
+* **Push-activiteiten van Marketo naar Salesforce**: Klik gewoon op admin->Salesforce en controleer de activiteiten die u met uw verkoopteam wilt delen.
 * **Nieuwe startpagina** voor slimme campagne: Hierin wordt de status van de campagne en een samenvatting van alle relevante informatie weergegeven. U kunt de kwalificatieregels wijzigen of naar het hoofdlidmaatschap gaan. Als de campagne een e-mail heeft verzonden, kunt u op de e-mailkoppeling klikken om een voorbeeld te bekijken.
 * **Het tabblad Membership Trend op hetzelfde scherm**: De beste praktijken moeten bepaalde focale campagnes hebben die doelstellingen vertegenwoordigen die u probeert te bereiken. Eén doel kan zijn wanneer u een lead over geeft aan het verkoopteam. Deze grafiek toont u de specifieke trend op een 3 maand-over-maand basis. U kunt zelfs het volledige scherm bekijken of de gegevens naar uitblinken uitvoeren!
 * **Exporteren vanuit** een lijst, een slimme lijst en zelfs de activiteit resulteert in een campagne. Kijk alleen maar naar de onderkant van het raster en klik op Exporteren.
