Updating Old File for core commit

--- a/help/marketo/release-notes/2010-2011.md
+++ b/help/marketo/release-notes/2010-2011.md
@@ -2,20 +2,20 @@
 unique-page-id: 2950206
 description: 2010-2011 - Marketo Docs - Productdocumentatie
 title: 2010-2011
+exl-id: 7a880f07-0a30-4b3f-b45b-1c519e9c1f94
 translation-type: tm+mt
-source-git-commit: 029d8b419ba5078980b4fde9890bdb35194bf264
+source-git-commit: 72e1d29347bd5b77107da1e9c30169cb6490c432
 workflow-type: tm+mt
 source-wordcount: '1679'
 ht-degree: 0%
 
 ---
 
-
 # 2010-2011
 
 ## September 2011 {#september}
 
-### Beheer van marktleiders {#marketo-lead-management}
+### Marketo Lead Management {#marketo-lead-management}
 
 * **Programma voor Salesforce Campagne Sync**: Synchroniseer uw Marketo-programma&#39;s met Salesforce-campagnes, waaronder leden, status en kosten.
 * **Meer lokale elementen**: Organiseer meer elementen, waaronder testgroepen voor bestemmingspagina&#39;s, slimme lijsten en statische lijsten in uw programma&#39;s.
@@ -23,10 +23,10 @@ ht-degree: 0%
 * **Tokens op bestemmingspagina&#39;s**: Net als bij e-mailberichten gebruiken bestemmingspagina&#39;s nu  `{{my.}}` en andere tokentypen.
 * **Tokenkiezer voor e-mail**: Het is nu nog gemakkelijker om tokens toe te voegen aan uw e-mails met de nieuwe token-knop.
 * **Nieuwe gebeurtenisadapters**: Gebruik Adobe Connect- en ON24-adapters met Marketo-programma&#39;s om uw gebeurtenisbeheer te stroomlijnen.
-* **Integratie** van Data.com: Verrijk uw gegevens met Data.com gebruikend een nieuwe Marketo stroomactie.
-* **Sociaal delen van bestemmingspagina**&#39;s: U kunt gemakkelijk knoppen voor sociaal delen toevoegen en configureren op uw e-mails, zoals Facebook, Twitter, LinkedIn en Google+.
-* **Ondersteuning voor** native opportunity: Vooral handig voor klanten die Salesforce niet als hun CRM gebruiken, hebben we een set nieuwe API&#39;s uitgebracht voor het uitvoeren van de bewerkingen Maken, Lezen, Bijwerken en Verwijderen (CRUD) op het Opportunity-object binnen Marketo.
-* **Filters** voor programmaprestaties: Filter het prestatierapport van het programma op markeringen en kanalen, om uw programma&#39;s van de Marketo voor rapportering te groeperen en te vergelijken.
+* **Integratie** van Data.com: Verrijk uw gegevens met Data.com gebruikend een nieuwe de stroomactie van Marketo.
+* **Sociaal delen van bestemmingspagina**&#39;s: U kunt eenvoudig knoppen voor sociaal delen toevoegen en configureren op uw e-mailberichten, zoals Facebook, Twitter, LinkedIn en Google+.
+* **Ondersteuning voor** native opportunity: Vooral handig voor klanten die Salesforce niet als hun CRM gebruiken, hebben we een set nieuwe API&#39;s uitgebracht voor het uitvoeren van de bewerkingen Maken, Lezen, Bijwerken en Verwijderen (CRUD) op het Opportunity-object in Marketo.
+* **Filters** voor programmaprestaties: Filter het prestatierapport van het programma op markeringen en kanalen, om uw Marketo programma&#39;s voor rapportering te groeperen en te vergelijken.
 * **Tabblad** Nieuwe rapportinstellingen: Wij hebben veranderingen aangebracht in waar u rapportmontages vormt. Een nieuw lusje, genoemd Opstelling, is beschikbaar op alle rapporten!
 * **De Waarde van Gegevens van de Verandering van het gebruik om Waarde van ONGELDIG** te plaatsen: Wij hebben de capaciteit uitgebreid om de waarde van een attribuut terug naar ONGELDIG te plaatsen.
 * **Nieuwe operatoren voor de Flow Step &quot;Remove from Flow&quot;**: We hebben nieuwe operatoren toegevoegd aan de actie Verwijderen uit stroom, waaronder &#39;is&#39;, &#39;is niet&#39; en &#39;contains&#39;.
@@ -50,7 +50,7 @@ ht-degree: 0%
 
 ## Juli 2011 {#july}
 
-### Beheer van marktleiders {#marketo-lead-management-1}
+### Marketo Lead Management {#marketo-lead-management-1}
 
 * **Slimme gebeurtenissen**: Met Slimme gebeurtenissen kunnen organisaties meer gebeurtenissen met minder bronnen uitvoeren door het gehele gebeurtenisproces in één flow te beheren en gebeurtenissen eenvoudig te klonen en opnieuw te gebruiken.
 * **WebEx-adapter**: Verbind naadloos een Slimme Gebeurtenis met een gebeurtenis WebEx (WebEx vereist Centrum van de Gebeurtenis) en gebruik Marketo landende pagina&#39;s en vormen om registranten te vangen en hen automatisch te registreren in WebEx.
@@ -84,7 +84,7 @@ ht-degree: 0%
 
 ## April 2011 {#april}
 
-### Beheer van marktleiders {#marketo-lead-management-2}
+### Marketo Lead Management {#marketo-lead-management-2}
 
 * **Firefox 4 en Internet Explorer 9**: Deze browsers worden nu volledig ondersteund.
 * **Lijst importeren ****Verbeteringen**: Kies en kies hoe je lood bij het importeren wilt verwerken.
@@ -94,7 +94,7 @@ ht-degree: 0%
 * **Systeemtokens**: Geef een veld een stempel met een datum en/of tijd.
 * **Tokens in Waarde** wijzigingsgegevens: Gebruik tokens in een stap Gegevenswaarde wijzigen om een veld bij te werken.
 
-### Marktverkoopinzicht {#marketo-sales-insight}
+### Marketo Sales Insight {#marketo-sales-insight}
 
 * **Aangepaste weergaven en filters**: Maak aangepaste weergaven op het dashboard Best Bets.
 * **Best Bets van mijn team (beheerweergave)**: In één oogopslag dashboard voor managers, die hen toestaan om hete lood en contacten voor hun volledig team te controleren.
@@ -111,11 +111,11 @@ ht-degree: 0%
 
 * **Afbeeldingen en bestanden zoeken**: Zoek afbeeldingen en bestanden in al uw mappen.
 * **Impliciete Salesforce-acties**: Handelingen voor Salesforce-stroming leiden automatisch tot Salesforce.
-* **Padanalyse** met succes: Voor klanten van de Ontdekkingsreiziger van de Ontvangingscyclus, controleer uw modelprestaties van binnen het Beheer van de Lood van de Marketo.
+* **Padanalyse** met succes: Voor klanten van de Ontdekkingsreiziger van de Ontvangingscyclus, controleer uw modelprestaties van binnen het Beheer van de Lood van Marketo.
 
 ## November 2010 {#november}
 
-* **Afbeeldingen en bestanden** vervangen: Bestanden bijwerken die u al hebt geüpload naar Marketo!
+* **Afbeeldingen en bestanden** vervangen: Bestanden bijwerken die u al naar Marketo hebt geüpload!
 * **Webbezoek ****drilldown**: Zie welke webpagina&#39;s een lead weergeven in het rapport met webactiviteiten.
 
 * **Ondersteuning** van rekeninghouders: E-mailtokens van eigenaars van accounts gebruiken en deze e-mailberichten sturen.
@@ -142,7 +142,7 @@ ht-degree: 0%
 * **Salesforce Campaign-tokens**: Geef dynamisch lood toe naar Salesforce-campagnes.
 * **Chatter-integratie voor Sales Insight**: We nemen nu interessante momenten op in uw chattijdlijn.
 * **Regels** voor partitie-toewijzing lead: Vereenvoudig de toewijzing van partities voor nieuwe Salesforce- en API-leads
-* **ICS-bestanden uploaden**: Browsers verwerken het downloaden van ICS-bestanden van Marketo op de juiste wijze.
+* **ICS-bestanden uploaden**: Browsers verwerken het downloaden van ICS-bestanden vanuit Marketo correct.
 * **Beveiligingsinstellingen**: Wijzig de instellingen voor wachtwoord en vervaldatum van de koppeling.
 
 ## Juni 2010 {#june}
@@ -152,7 +152,7 @@ ht-degree: 0%
 * **Mappen voor afbeeldingen en bestanden**: Plaats uw bestanden en afbeeldingen in mappen voor organisatie en delen.
 * **Werkruimten**: Het delen van Slimme Campagnes (de Uitgave van de Onderneming) — deel Slimme programma&#39;s van de Campagne tussen werkruimten.
 * **Zoekupdates** lead: Bij gebruik van Snelle weergave kunt u sneller naar leads zoeken.
-* **SOAP API-configuratie**: Krijg uw montages van de ZEEP API door de Marketo interface.
+* **SOAP API-configuratie**: Krijg uw montages van de ZEEP API door de interface van Marketo.
 
 ## Maart 2010 {#march-1}
 
